Edited_Code_and_Results/libcsv_edits/libcsv_cargo_check.txt
    Updating crates.io index
   Compiling libc v0.2.171
    Checking libcsv v0.1.0 (/mnt/c/Users/mazin/Downloads/School/Research/datasets/2-C2Rust-Translation/libcsv_edits)
warning: unused label
   --> src/libcsv.rs:111:5
    |
111 |     'c_2142: {
    |     ^^^^^^^
    |
    = note: `#[warn(unused_labels)]` on by default

warning: unused label
   --> src/libcsv.rs:314:5
    |
314 |     'c_4379: {
    |     ^^^^^^^

warning: unused label
   --> src/libcsv.rs:352:5
    |
352 |     'c_4427: {
    |     ^^^^^^^

warning: unused label
   --> src/libcsv.rs:487:5
    |
487 |     'c_3937: {
    |     ^^^^^^^

error[E0601]: `main` function not found in crate `libcsv`
    --> src/libcsv.rs:1014:2
     |
1014 | }
     |  ^ consider adding a `main` function to `src/libcsv.rs`

For more information about this error, try `rustc --explain E0601`.
warning: `libcsv` (bin "libcsv") generated 4 warnings
error: could not compile `libcsv` due to previous error; 4 warnings emitted
